--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
   </div>
 </div>
         
-        <script src="index.pack.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
